Add standard-aifc and standard-sunau as dependencies for python 3.13 and above. Python core removed these modules in 3.13 as part of PEP-594 https://peps.python.org/pep-0594/ The standard-* modules are forks of the modules that had previously been in the python core. Fixes https://github.com/beetbox/audioread/issues/144

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ classifiers = [
     'License :: OSI Approved :: MIT License',
 ]
 license = {file = "LICENSE"}
+dependencies = [
+    "standard-aifc; python_version >= '3.13'",
+    "standard-sunau; python_version >= '3.13'",
+]
 
 [project.optional-dependencies]
 test = [
